<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/money"
        android:title="@string/title_collection"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/reports"
        android:title="@string/title_reports"
        app:showAsAction="always|withText"/>
    <item

        android:id="@+id/navigation_add_customer"
        android:icon="@drawable/customer"
        android:title="@string/title_add_customer"
        app:showAsAction="always|withText"/>

</menu>
