<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorGreen"
    android:orientation="vertical"
    tools:context="com.example.sandy.loancollection.activity.ReportActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/color_gray"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:text="@string/reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>




    <LinearLayout
        android:layout_margin="05dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_agent_report"
            android:textSize="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="05dp"
            android:layout_marginTop="05dp"
            android:background="@drawable/border_btn_layout"
            android:text="@string/agent_report"
            android:textStyle="normal"
            android:textColor="@color/colorGreen"/>
        <TextView
            android:gravity="center_vertical"
            android:layout_margin="05dp"
            android:padding="05dp"
            android:visibility="gone"
            android:hint="@string/select_date"
            android:background="@drawable/edittextborder"
            android:inputType="number"
            android:id="@+id/edt_report_agent_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            />
        <Button
            android:id="@+id/btn_getReport_agent"
            android:visibility="gone"
            android:layout_margin="05dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:text="@string/go_report"
            android:textSize="17dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_margin="05dp"
        android:layout_marginTop="05dp"
        android:gravity="right"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_customer_report"
            android:textStyle="normal"
            android:textSize="17dp"
            android:textColor="@color/colorGreen"
            android:text="@string/customer_report"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/border_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:visibility="gone"
            android:layout_margin="05dp"
            android:hint="@string/file_number_report"
            android:background="@drawable/edittextborder"
            android:inputType="number"
            android:id="@+id/edt_report_customer_number"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:padding="05dp"
            android:layout_height="35dp"
            />
        <Button
            android:layout_margin="05dp"
            android:id="@+id/btn_getCustomerReport"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:text="@string/go"
            android:textSize="17dp"/>

    </LinearLayout>


</LinearLayout>
