<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorGreen">
    <LinearLayout
        android:padding="10dp"
        android:background="@color/color_gray"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:text="@string/welcome_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="30dp"
        android:text="@string/agent_login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:textSize="17dp"
            android:textColor="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/login_id"/>
        <EditText
            android:background="@drawable/edittextborder"
            android:inputType="text"
            android:id="@+id/edt_userid"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="35dp"
            android:padding="05dp"
            />
        <TextView
            android:textSize="17dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:textColor="@android:color/background_light"
            android:text="@string/password"/>
        <EditText
            android:background="@drawable/edittextborder"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="35dp"
            android:padding="05dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_btn_layout"
            android:text="@string/login"
            android:textSize="17dp"
            android:textColor="@color/colorGreen"/>
    </LinearLayout>

</LinearLayout>
