<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="03dp"
        android:background="@drawable/border_line_table"
        android:id="@+id/linear_transaction_details"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_below="@id/linear_account_number">

        <TextView
            android:id="@+id/textView_date"
            android:background="@drawable/border_1dp"
            android:text="@string/date"
            android:textSize="13sp"
            android:textColor="@color/colorGreen"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textView_collected_amount"
            android:background="@drawable/border_1dp"
            android:text="@string/customer_collected_amount"
            android:textSize="17sp"
            android:textColor="@color/colorGreen"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />


        <TextView
            android:id="@+id/textView_remaining_amount"
            android:background="@drawable/border_1dp"
            android:text="@string/remaining_amount"
            android:textSize="17sp"
            android:textColor="@color/colorGreen"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>